fix console overlap

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -139,6 +139,9 @@
   max-width: 150px;
 }
 table.cc1 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 16px;
   line-height: 1.0;
 
   .action-chooser {
